--- a/Project-I-Social-Card/social-card/public/index.html
+++ b/Project-I-Social-Card/social-card/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script src="./index.js"></script>
+    <script src="./social-card/src/index.js"></script>
   </head>
   <body>
     <noscript>
